# Real-World-Haskell

./: .gitignore  README.md
ch01/: WC.hs
ch02/: Assign.hs  Take.hs  myDrop.hs  shortCircuit.hs
ch03/: AlgebraicVector.hs  AltCustomer.hs  BadIndent.hs  BadPattern.hs  BadTree.hs  BogusPattern.hs  BookStore.hs  Bool.hs  Braces.hs  Distinction.hs  GlobalVariable.hs  GoodIndent.hs  Guard.hs  Indentation.hs  Lending.hs  ListADT.hs  MySecond.hs  NestedLets.hs  Nullable.hs  Roygbiv.hs  ShapeUnion.hs  Tree.hs  Tuple.hs  add.hs  letwhere.hs
ch04/: Adler32.hs  EfficientList.hs  Filter.hs  FixLines.hs  Fold.hs  IntParse.hs  InteractWith.hs  Lambda.hs  Map.hs  Partial.hs  Plus.hs  SplitLines.hs  SuffixTree.hs  Sum.hs  dlts.hs
ch05/: .Prettify.hs.swp  Main.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs  build.sh  mypretty.cabal  simple
ch06/: AutomaticDerivation.hs  eqclasses.hs
ch07/: actions2.hs  basicio-nodo.hs  return1.hs  tempfile.hs  toupper-imp.hs  toupper-lazy5.hs
ch13/: buildmap.hs  funcrecs.hs  funcrecs2.hs  lookup.hs  passwd-al  passwd-al.hs
